// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should default to process.cwd() and static server 1`] = `
"◈ Netlify Dev ◈
◈ No app server detected. Using simple static server
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Running static server from \\"site-with-index-file\\"
◈ Setting up local development server

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘"
`;

exports[`should detect a known framework 1`] = `
"◈ Netlify Dev ◈
◈ Setting up local development server
◈ Starting Netlify Dev with Create React App

> start
> react-scripts start

◈ Command failed with exit code *: npm run start. Shutting down Netlify Dev server"
`;

exports[`should filter frameworks with no dev command 1`] = `
"◈ Netlify Dev ◈
◈ No app server detected. Using simple static server
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Running static server from \\"site-with-gulp\\"
◈ Setting up local development server

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘"
`;

exports[`should force a specific framework when configured 1`] = `
"◈ Netlify Dev ◈
◈ Setting up local development server
◈ Starting Netlify Dev with Create React App
◈ Failed running command: react-scripts start. Please verify 'react-scripts' exists"
`;

exports[`should log the command if using static server and \`command\` is configured 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '--dir' flag was specified
◈ Running static server from \\"site-with-index-file/public\\"
◈ Setting up local development server

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘"
`;

exports[`should not run framework detection if command and targetPort are configured 1`] = `
"◈ Netlify Dev ◈
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Setting up local development server
◈ Starting Netlify Dev with custom config
hello
◈ \\"echo hello\\" exited with code *. Shutting down Netlify Dev server"
`;

exports[`should pass framework-info env to framework sub process 1`] = `
"◈ Netlify Dev ◈
◈ Setting up local development server
◈ Starting Netlify Dev with Nuxt 3

> dev
> node -p process.env.NODE_VERSION

14
◈ \\"npm run dev\\" exited with code *. Shutting down Netlify Dev server"
`;

exports[`should print specific error when command doesn't exist 1`] = `
"◈ Netlify Dev ◈
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Setting up local development server
◈ Starting Netlify Dev with #custom
◈ Failed running command: oops-i-did-it-again forgot-to-use-a-valid-command. Please verify 'oops-i-did-it-again' exists"
`;

exports[`should prompt when multiple frameworks are detected 1`] = `
"◈ Netlify Dev ◈
? Multiple possible start commands found (Use arrow keys or type to search)
> [Gatsby] 'npm run develop' 
  [Create React App] 'npm run start' [2A[37D[75C[2B[2K[1A[2K[1A[2K[G? Multiple possible start commands found 
  [Gatsby] 'npm run develop' 
> [Create React App] 'npm run start' [2A[37D[41C[2B[2K[1A[2K[1A[2K[G? Multiple possible start commands found Create React App-npm run start[71D[71C
Add 'framework = \\"create-react-app\\"' to the [dev] section of your netlify.toml to avoid this selection prompt next time
◈ Setting up local development server
◈ Starting Netlify Dev with Create React App

> start
> react-scripts start

◈ Command failed with exit code *: npm run start. Shutting down Netlify Dev server"
`;

exports[`should run \`command\` when both \`command\` and \`targetPort\` are configured 1`] = `
"◈ Netlify Dev ◈
◈ Setting up local development server
◈ Starting Netlify Dev with custom config
hello
◈ \\"echo hello\\" exited with code *. Shutting down Netlify Dev server"
`;

exports[`should run and serve a production build when using the \`serve\` command 1`] = `
"◈ Injected netlify.toml file env var: CONTEXT_CHECK
◈ Using simple static server because '[dev.framework]' was set to '#static'
◈ Running static server from \\"site-with-framework/public\\"
◈ Building site for production
◈ Changes will not be hot-reloaded, so if you need to rebuild your site you must exit and run 'netlify serve' again
​
Netlify Build                                                 
────────────────────────────────────────────────────────────────
​
> Version
  @netlify/build 0.0.0
​
> Flags
  offline: true
  outputConfigPath:/file/path
​
> Current directory
 /file/path
​
> Config file
 /file/path
​
> Context
  production
​
> Loading plugins
   -/file/path from netlify.toml
​
/file/path (onPreBuild event)                      
────────────────────────────────────────────────────────────────
​
Netlify configuration property \\"redirects\\" value changed to [ { from: /file/path', to: /file/path' } ].
​
/file/path onPreBuild completed in Xms)
​
Functions bundling                                            
────────────────────────────────────────────────────────────────
​
Packaging Functions from new_functions directory:
 - hello.js
​
​
(Functions bundling completed in Xms)
​
Save deploy artifacts                                         
────────────────────────────────────────────────────────────────
​
​
(Save deploy artifacts completed in Xms)
​
Netlify Build Complete                                        
────────────────────────────────────────────────────────────────
​
(Netlify Build completed in Xms)

◈ Static server listening to 88888
◈ Loaded function hello http://localhost:88888/.netlify/functions/hello.
◈ Functions server is listening on 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘"
`;

exports[`should start custom command if framework=#custom, command and targetPort are configured 1`] = `
"◈ Netlify Dev ◈
◈ Setting up local development server
◈ Starting Netlify Dev with #custom
hello
◈ \\"echo hello\\" exited with code *. Shutting down Netlify Dev server"
`;

exports[`should throw if framework=#custom but command is missing 1`] = `
"◈ Netlify Dev ◈
◈ 'command' and 'targetPort' properties are required when 'framework' is set to '#custom'"
`;

exports[`should throw if framework=#custom but targetPort is missing 1`] = `
"◈ Netlify Dev ◈
◈ 'command' and 'targetPort' properties are required when 'framework' is set to '#custom'"
`;

exports[`should throw when forcing a non supported framework 1`] = `
"◈ Netlify Dev ◈
◈ Invalid framework \\"to-infinity-and-beyond-js\\". It should be one of: *"
`;

exports[`should use static server when --dir flag is passed 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '--dir' flag was specified
◈ Running static server from \\"site-with-index-file/public\\"
◈ Setting up local development server

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘"
`;

exports[`should use static server when framework is set to #static 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '[dev.framework]' was set to '#static'
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Running static server from \\"site-with-index-file\\"
◈ Setting up local development server

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘"
`;

exports[`should warn if using static server and \`targetPort\` is configured 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '--dir' flag was specified
◈ Ignoring 'targetPort' setting since using a simple static server.
◈ Use --staticServerPort or [dev.staticServerPort] to configure the static server port
◈ Running static server from \\"site-with-index-file/public\\"
◈ Setting up local development server

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘"
`;
